--- a/thesis/bib/db.bib
+++ b/thesis/bib/db.bib
@@ -46,9 +46,9 @@
 
 @WEB{Python,
   key = {Python},
-  link = {http://python.org,},
-  title = {Le site web officiel du Python},
-  year = { 2010}
+  link = {http://www.python.org/about/,},
+  title = {Python official website - about page},
+  year = { 2012}
 }
 
 @WEB{Qurany,
@@ -303,6 +303,8 @@ Ontologies },
   year={2004},
   publisher={University of Rochester, San Francisco, California}
 }
+
+
 
 @ARTICLE{Jal02,
   author = {Radwan Jalam and Chauchat Jean Hugues},
@@ -630,6 +632,17 @@ Ontologies },
   publisher={McGraw-Hill Osborne Media}
 }
 
+
+@book{lancaster2003indexing,
+  title={Indexing and abstracting in theory and practice},
+  author={Lancaster, F.W.},
+  isbn={9781856044820},
+  lccn={2003501172},
+  url={http://books.google.dz/books?id=w-waAQAAMAAJ},
+  year={2003},
+  publisher={Facet}
+}
+
 @book{Meh73,
   title={\begin{Arabic}\raggedleft  تاريخ-القرآن-الكريم \end{Arabic}},
   author={Muhammed Salem Mahssin},
@@ -743,7 +756,32 @@ Ontologies },
   language = {english}
  } 
 
+@book{luhn1957statistical,
+  title={A Statistical Approach to Mechanized Encoding and Searching of Literary Information},
+  author={Luhn, H.P.},
+  url={http://books.google.dz/books?id=-0tHGwAACAAJ},
+  year={1957},
+  publisher={IBM, International Business Machines Copr.}
+}
 
+@book{gaussier2003assistance,
+  title={Assistance intelligente {\`a} la recherche d'informations},
+  author={Gaussier, E.},
+  isbn={9782746207264},
+  series={Trait{\'e} des sciences et techniques de l'information},
+  url={http://books.google.dz/books?id=gKNDAAAACAAJ},
+  year={2003},
+  publisher={Hermes Science Publications}
+}
+
+
+@book{luhn1958automatic,
+  title={The Automatic Creation of Literature Abstracts (auto-abstracts)},
+  author={Luhn, H.P.},
+  url={http://books.google.dz/books?id=m59RGwAACAAJ},
+  year={1958},
+  publisher={IBM Research Center, International Business Machines Corporation}
+}
 
 @comment{jabref-meta: pdfDirectory:D:\\Esi-Documents\\5I\\BI\\Rapport\
 \4;}
